Add default buttons Cleanup